--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   </head>
   <body>
     <a-scene>
-      <a-sphere position="0 1.25 -5" radius="1.25" src="earth.jpg"></a-sphere>
+      <a-sphere position="0 1.25 -5" radius="1.25" src="earth.jpg" animation="property:rotation;dur:10000;from:0 0 0;to:0 360 0;easing:linear;loop:-1;">
+          <a-obj-model src="Mecha01.obj" mtl="Mecha01.mtl" position="2 0 0" rotation="0 -90 0" scale="0.1 0.1 0.1">
+              
+          </a-obj-model></a-sphere>
       <a-sky src="space.png"></a-sky>
     </a-scene>
   </body>
