--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <html>
-  <head>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-  </head>
-  <body>
-    <a-scene>
-      <a-sphere position="0 1.25 -5" radius="1.25" src="earth.jpg" animation="property:rotation;dur:10000;from:0 0 0;to:0 360 0;easing:linear;loop:-1;">
-          <a-obj-model src="Mecha01.obj" mtl="Mecha01.mtl" position="2 0 0" rotation="0 -90 0" scale="0.1 0.1 0.1">
-              
-          </a-obj-model></a-sphere>
-      <a-sky src="space.png"></a-sky>
-    </a-scene>
-  </body>
+
+<head>
+  <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+</head>
+
+<body>
+  <a-scene>
+    <a-sky src="space.png"></a-sky>
+  </a-scene>
+  <script>
+    function add_box(position) {
+
+      var box = document.createElement("a-box");
+      box.setAttribute("color", "#ffffff");
+      box.setAttribute("rotation", "0 0 0");
+      box.setAttribute("width", "0.1");
+      box.setAttribute("height", "0.1");
+      box.setAttribute("depth", "0.1");
+      box.setAttribute("position", position);
+      return box;
+    }
+
+
+    var scene = document.querySelector("a-scene");
+    var box = [];
+    var x = -20;
+    var z = 0
+    // box[0] = add_box("0 0 0")
+    // scene.appendChild(box[0]);
+    
+    function move_box() {
+      var x2 = -20;
+      for (var i = 0; i < 20; i++) {
+        box[i].setAttribute("position", x2 + " 0 " + z)
+        x2 = x2 + 2;
+      }
+      z = z + 0.01
+    }
+
+    for (var i = 0; i < 20; i++) {
+      box[i] = add_box(x + " 0 0");
+      scene.appendChild(box[i]);
+      x = x + 2;
+    }
+
+    setInterval(move_box, 10)
+
+  </script>
+</body>
+
 </html>
