テクスチャの追加

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         });
         //Aボタンを押した時(右手のみ)
         this.el.addEventListener("abuttondown", function (e) {
+          box.setAttribute("src","diamond.png");
         });
         //Bボタンを押した時(右手のみ)
         this.el.addEventListener("bbuttondown", function (e) { });
