試験用ソース

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     <a-entity oculus-touch-controls="hand: left" input-listen> </a-entity>
     <a-entity oculus-touch-controls="hand: right" input-listen> </a-entity>
     <a-sky src="space.png"></a-sky>
+    <a-entity camera>
+      <a-text position="0 0 -1">test</a-text>
+    </a-entity>
   </a-scene>
 </body>
 
