テキスト色を白色に

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <a-entity oculus-touch-controls="hand: right" input-listen> </a-entity>
     <a-sky src="space.png"></a-sky>
     <a-entity camera>
-      <a-text position="0 0 -1">test</a-text>
+      <a-text position="0 0 -1" color="white">test</a-text>
     </a-entity>
   </a-scene>
 </body>
