--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           }
         });
         //Bボタンを押した時(右手のみ)
-        this.el.addEventListener("bbuttondown", function (e) { });
+        this.el.addEventListener("bbuttondown", function (e) {
+          document.getElementById("text_").value="AAA";
+        });
         //Xボタンを押した時(左手のみ)
         this.el.addEventListener("xbuttondown", function (e) { });
         //Xボタンを離した時(左手)
@@ -64,7 +66,7 @@
     <a-entity oculus-touch-controls="hand: right" input-listen> </a-entity>
     <a-sky src="space.png"></a-sky>
     <a-entity camera>
-      <a-text position="0 0 -1" color="white" scale="2" value="test"></a-text>
+      <a-text id="text_" position="-0.5 -1 -3" color="white" scale="1" value="test"></a-text>
     </a-entity>
   </a-scene>
 </body>
