--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         });
         //Bボタンを押した時(右手のみ)
         this.el.addEventListener("bbuttondown", function (e) {
-          document.getElementById("text_").value="AAA";
+          document.getElementById("text_").setAttribute("value","AAA")
         });
         //Xボタンを押した時(左手のみ)
         this.el.addEventListener("xbuttondown", function (e) { });
@@ -66,9 +66,8 @@
     <a-entity oculus-touch-controls="hand: right" input-listen> </a-entity>
     <a-sky src="space.png"></a-sky>
     <a-entity camera>
-      <a-text id="text_" position="-0.5 -1 -3" color="white" scale="1" value="test"></a-text>
+      <a-text id="text_" position="-0.25 -2 -2" color="white" scale="1" value="test"></a-text>
     </a-entity>
-  </a-scene>
 </body>
 
 </html>
